[gd_scene load_steps=2 format=2]

[ext_resource path="res://Screen/MathPage/ChooseMenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 408.0
margin_top = 274.0
margin_right = 714.0
margin_bottom = 378.0
text = "x20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 398.0
margin_top = 110.0
margin_right = 712.0
margin_bottom = 214.0
text = "x10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 400.0
margin_top = 426.0
margin_right = 716.0
margin_bottom = 558.0
text = "x100"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
